tests/rosetta/out/C/bin-given-limits.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:51Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:51Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int getBins(list_int limits, list_int data) {
  int n = limits.len;
  list_int bins = list_int_create(0);
  int i = 0;
  while (i < n + 1) {
    bins = 0;
    i = i + 1;
  }
  int j = 0;
  while (j < data.len) {
    int d = data.data[j];
    int index = 0;
    while (index < limits.len) {
      if (d < limits.data[index]) {
        break;
      }
      if (d == limits.data[index]) {
        index = index + 1;
        break;
      }
      index = index + 1;
    }
    bins.data[index] = bins.data[index] + 1;
    j = j + 1;
  }
  return bins;
}

const char *padLeft(int n, int width) {
  char *tmp1 = _str(n);
  const char *s = tmp1;
  int pad = width - strlen(s);
  const char *out = "";
  int i = 0;
  while (i < pad) {
    char *tmp2 = concat_string(out, " ");
    out = tmp2;
    i = i + 1;
  }
  char *tmp3 = concat_string(out, s);
  return tmp3;
}

int printBins(list_int limits, list_int bins) {
  int n = limits.len;
  printf("%s\n", "           < " + padLeft(limits.data[0], 3) + " = " +
                     padLeft(bins.data[0], 2));
  int i = 1;
  while (i < n) {
    printf("%s\n", ">= " + padLeft(limits.data[i - 1], 3) + " and < " +
                       padLeft(limits.data[i], 3) + " = " +
                       padLeft(bins.data[i], 2));
    i = i + 1;
  }
  printf("%s\n", ">= " + padLeft(limits.data[n - 1], 3) + "           = " +
                     padLeft(bins.data[n], 2));
  printf("\n");
}

int main() {
  list_int tmp4 = list_int_create(6);
  tmp4.data[0] = 23;
  tmp4.data[1] = 37;
  tmp4.data[2] = 43;
  tmp4.data[3] = 53;
  tmp4.data[4] = 67;
  tmp4.data[5] = 83;
  list_int tmp5 = list_int_create(10);
  tmp5.data[0] = 14;
  tmp5.data[1] = 18;
  tmp5.data[2] = 249;
  tmp5.data[3] = 312;
  tmp5.data[4] = 389;
  tmp5.data[5] = 392;
  tmp5.data[6] = 513;
  tmp5.data[7] = 591;
  tmp5.data[8] = 634;
  tmp5.data[9] = 720;
  list_int limitsList_data[] = {{6, tmp4}, {10, tmp5}};
  list_list_int limitsList = {2, limitsList_data};
  list_list_int limitsList = limitsList;
  list_int tmp6 = list_int_create(50);
  tmp6.data[0] = 95;
  tmp6.data[1] = 21;
  tmp6.data[2] = 94;
  tmp6.data[3] = 12;
  tmp6.data[4] = 99;
  tmp6.data[5] = 4;
  tmp6.data[6] = 70;
  tmp6.data[7] = 75;
  tmp6.data[8] = 83;
  tmp6.data[9] = 93;
  tmp6.data[10] = 52;
  tmp6.data[11] = 80;
  tmp6.data[12] = 57;
  tmp6.data[13] = 5;
  tmp6.data[14] = 53;
  tmp6.data[15] = 86;
  tmp6.data[16] = 65;
  tmp6.data[17] = 17;
  tmp6.data[18] = 92;
  tmp6.data[19] = 83;
  tmp6.data[20] = 71;
  tmp6.data[21] = 61;
  tmp6.data[22] = 54;
  tmp6.data[23] = 58;
  tmp6.data[24] = 47;
  tmp6.data[25] = 16;
  tmp6.data[26] = 8;
  tmp6.data[27] = 9;
  tmp6.data[28] = 32;
  tmp6.data[29] = 84;
  tmp6.data[30] = 7;
  tmp6.data[31] = 87;
  tmp6.data[32] = 46;
  tmp6.data[33] = 19;
  tmp6.data[34] = 30;
  tmp6.data[35] = 37;
  tmp6.data[36] = 96;
  tmp6.data[37] = 6;
  tmp6.data[38] = 98;
  tmp6.data[39] = 40;
  tmp6.data[40] = 79;
  tmp6.data[41] = 97;
  tmp6.data[42] = 45;
  tmp6.data[43] = 64;
  tmp6.data[44] = 60;
  tmp6.data[45] = 29;
  tmp6.data[46] = 49;
  tmp6.data[47] = 36;
  tmp6.data[48] = 43;
  tmp6.data[49] = 55;
  list_int tmp7 = list_int_create(200);
  tmp7.data[0] = 445;
  tmp7.data[1] = 814;
  tmp7.data[2] = 519;
  tmp7.data[3] = 697;
  tmp7.data[4] = 700;
  tmp7.data[5] = 130;
  tmp7.data[6] = 255;
  tmp7.data[7] = 889;
  tmp7.data[8] = 481;
  tmp7.data[9] = 122;
  tmp7.data[10] = 932;
  tmp7.data[11] = 77;
  tmp7.data[12] = 323;
  tmp7.data[13] = 525;
  tmp7.data[14] = 570;
  tmp7.data[15] = 219;
  tmp7.data[16] = 367;
  tmp7.data[17] = 523;
  tmp7.data[18] = 442;
  tmp7.data[19] = 933;
  tmp7.data[20] = 416;
  tmp7.data[21] = 589;
  tmp7.data[22] = 930;
  tmp7.data[23] = 373;
  tmp7.data[24] = 202;
  tmp7.data[25] = 253;
  tmp7.data[26] = 775;
  tmp7.data[27] = 47;
  tmp7.data[28] = 731;
  tmp7.data[29] = 685;
  tmp7.data[30] = 293;
  tmp7.data[31] = 126;
  tmp7.data[32] = 133;
  tmp7.data[33] = 450;
  tmp7.data[34] = 545;
  tmp7.data[35] = 100;
  tmp7.data[36] = 741;
  tmp7.data[37] = 583;
  tmp7.data[38] = 763;
  tmp7.data[39] = 306;
  tmp7.data[40] = 655;
  tmp7.data[41] = 267;
  tmp7.data[42] = 248;
  tmp7.data[43] = 477;
  tmp7.data[44] = 549;
  tmp7.data[45] = 238;
  tmp7.data[46] = 62;
  tmp7.data[47] = 678;
  tmp7.data[48] = 98;
  tmp7.data[49] = 534;
  tmp7.data[50] = 622;
  tmp7.data[51] = 907;
  tmp7.data[52] = 406;
  tmp7.data[53] = 714;
  tmp7.data[54] = 184;
  tmp7.data[55] = 391;
  tmp7.data[56] = 913;
  tmp7.data[57] = 42;
  tmp7.data[58] = 560;
  tmp7.data[59] = 247;
  tmp7.data[60] = 346;
  tmp7.data[61] = 860;
  tmp7.data[62] = 56;
  tmp7.data[63] = 138;
  tmp7.data[64] = 546;
  tmp7.data[65] = 38;
  tmp7.data[66] = 985;
  tmp7.data[67] = 948;
  tmp7.data[68] = 58;
  tmp7.data[69] = 213;
  tmp7.data[70] = 799;
  tmp7.data[71] = 319;
  tmp7.data[72] = 390;
  tmp7.data[73] = 634;
  tmp7.data[74] = 458;
  tmp7.data[75] = 945;
  tmp7.data[76] = 733;
  tmp7.data[77] = 507;
  tmp7.data[78] = 916;
  tmp7.data[79] = 123;
  tmp7.data[80] = 345;
  tmp7.data[81] = 110;
  tmp7.data[82] = 720;
  tmp7.data[83] = 917;
  tmp7.data[84] = 313;
  tmp7.data[85] = 845;
  tmp7.data[86] = 426;
  tmp7.data[87] = 9;
  tmp7.data[88] = 457;
  tmp7.data[89] = 628;
  tmp7.data[90] = 410;
  tmp7.data[91] = 723;
  tmp7.data[92] = 354;
  tmp7.data[93] = 895;
  tmp7.data[94] = 881;
  tmp7.data[95] = 953;
  tmp7.data[96] = 677;
  tmp7.data[97] = 137;
  tmp7.data[98] = 397;
  tmp7.data[99] = 97;
  tmp7.data[100] = 854;
  tmp7.data[101] = 740;
  tmp7.data[102] = 83;
  tmp7.data[103] = 216;
  tmp7.data[104] = 421;
  tmp7.data[105] = 94;
  tmp7.data[106] = 517;
  tmp7.data[107] = 479;
  tmp7.data[108] = 292;
  tmp7.data[109] = 963;
  tmp7.data[110] = 376;
  tmp7.data[111] = 981;
  tmp7.data[112] = 480;
  tmp7.data[113] = 39;
  tmp7.data[114] = 257;
  tmp7.data[115] = 272;
  tmp7.data[116] = 157;
  tmp7.data[117] = 5;
  tmp7.data[118] = 316;
  tmp7.data[119] = 395;
  tmp7.data[120] = 787;
  tmp7.data[121] = 942;
  tmp7.data[122] = 456;
  tmp7.data[123] = 242;
  tmp7.data[124] = 759;
  tmp7.data[125] = 898;
  tmp7.data[126] = 576;
  tmp7.data[127] = 67;
  tmp7.data[128] = 298;
  tmp7.data[129] = 425;
  tmp7.data[130] = 894;
  tmp7.data[131] = 435;
  tmp7.data[132] = 831;
  tmp7.data[133] = 241;
  tmp7.data[134] = 989;
  tmp7.data[135] = 614;
  tmp7.data[136] = 987;
  tmp7.data[137] = 770;
  tmp7.data[138] = 384;
  tmp7.data[139] = 692;
  tmp7.data[140] = 698;
  tmp7.data[141] = 765;
  tmp7.data[142] = 331;
  tmp7.data[143] = 487;
  tmp7.data[144] = 251;
  tmp7.data[145] = 600;
  tmp7.data[146] = 879;
  tmp7.data[147] = 342;
  tmp7.data[148] = 982;
  tmp7.data[149] = 527;
  tmp7.data[150] = 736;
  tmp7.data[151] = 795;
  tmp7.data[152] = 585;
  tmp7.data[153] = 40;
  tmp7.data[154] = 54;
  tmp7.data[155] = 901;
  tmp7.data[156] = 408;
  tmp7.data[157] = 359;
  tmp7.data[158] = 577;
  tmp7.data[159] = 237;
  tmp7.data[160] = 605;
  tmp7.data[161] = 847;
  tmp7.data[162] = 353;
  tmp7.data[163] = 968;
  tmp7.data[164] = 832;
  tmp7.data[165] = 205;
  tmp7.data[166] = 838;
  tmp7.data[167] = 427;
  tmp7.data[168] = 876;
  tmp7.data[169] = 959;
  tmp7.data[170] = 686;
  tmp7.data[171] = 646;
  tmp7.data[172] = 835;
  tmp7.data[173] = 127;
  tmp7.data[174] = 621;
  tmp7.data[175] = 892;
  tmp7.data[176] = 443;
  tmp7.data[177] = 198;
  tmp7.data[178] = 988;
  tmp7.data[179] = 791;
  tmp7.data[180] = 466;
  tmp7.data[181] = 23;
  tmp7.data[182] = 707;
  tmp7.data[183] = 467;
  tmp7.data[184] = 33;
  tmp7.data[185] = 670;
  tmp7.data[186] = 921;
  tmp7.data[187] = 180;
  tmp7.data[188] = 991;
  tmp7.data[189] = 396;
  tmp7.data[190] = 160;
  tmp7.data[191] = 436;
  tmp7.data[192] = 717;
  tmp7.data[193] = 918;
  tmp7.data[194] = 8;
  tmp7.data[195] = 374;
  tmp7.data[196] = 101;
  tmp7.data[197] = 684;
  tmp7.data[198] = 727;
  tmp7.data[199] = 749;
  list_int dataList_data[] = {{50, tmp6}, {200, tmp7}};
  list_list_int dataList = {2, dataList_data};
  list_list_int dataList = dataList;
  int i = 0;
  while (i < limitsList.len) {
    char *tmp8 = _str(i + 1);
    char *tmp9 = concat_string("Example ", tmp8);
    char *tmp10 = concat_string(tmp9, "\n");
    printf("%s\n", tmp10);
    list_int bins = getBins(limitsList.data[i], dataList.data[i]);
    printBins(limitsList.data[i], bins);
    i = i + 1;
  }
}

int main() {
  main();
  return 0;
}
